// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Snapshots tests should match snapshot 1`] = `
<div>
  <div
    class="component component s s"
  >
    <div
      class="inner inner inner inner filled"
    >
      <div
        class="inputWrapper wrapper s"
      >
        <div
          class="input"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea s filled"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea Snapshots tests should match snapshot with custom counter 1`] = `
<div>
  <div
    class="component component s s"
  >
    <div
      class="inner inner inner inner filled"
    >
      <div
        class="inputWrapper wrapper s"
      >
        <div
          class="input"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea s filled"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
    <span
      class="sub hint"
    >
      Custom counter
    </span>
  </div>
</div>
`;

exports[`Textarea Snapshots tests should match snapshot with custom scrollbar 1`] = `
<div>
  <div
    class="component component s s"
  >
    <div
      class="inner inner inner inner filled"
    >
      <div
        class="inputWrapper wrapper s"
      >
        <div
          class="input"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea s customScrollbar filled"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea Snapshots tests should match snapshot with default counter 1`] = `
<div>
  <div
    class="component component s s"
  >
    <div
      class="inner inner inner inner filled"
    >
      <div
        class="inputWrapper wrapper s"
      >
        <div
          class="input"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea s filled"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
    <span
      class="sub hint"
    >
      5/500 символов
    </span>
  </div>
</div>
`;
